[package]
name = "ns-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.24.2"
anyhow = "1.0.58"
custom-utils = "0.10.2"

tokio = {version = "1.20.1", features = ["full"]}
heim = {git = "https://github.com/heim-rs/heim.git", features = ["cpu", "memory", "disk"]}

#
interprocess = "1.1.1"
